# qodeAssignment

./: .gitignore  CMakeLists.txt  Design.md  README.md  Readme.md  feedhandler  main  main_feedhandler  trade.txt
configs/: ServerConfig.ini
include/: ConfigManager.hpp
scripts/: run_simulation.sh
src/client/: feed_handler.cpp  feed_handler.hpp  main_feedhandler.cpp  market_data_socket.cpp  market_data_socket.h  market_data_socket.hpp  parser.cpp  parser.h  parser.hpp  visualizer.cpp  visualizer.h  visualizer.hpp
src/common/: protocol.h
src/server/: exchange_simulator.hpp  main  main.cpp
